fix: svg image on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -522,3 +522,7 @@ select:focus {
   height: 100% !important;
 }
 
+svg {
+  width: 100%;
+  height: 100%;
+}
